.github/scripts/tests/fixtures/ci-manifest-binding/fail/missing-reference/.github/scripts/validate-foo.py
#!/usr/bin/env python3
"""Fixture stub — referenced by manifest."""
